.. Author notes: this file is formatted with restructured text
  (http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
  as it is included in Scrooge's user's guide.

Unreleased
----------

- scrooge: Upgrade libthrift to 0.10.0. ``PHAB_ID=D124620``


18.3.0
-------

- scrooge-generator: Add support for mutually recursive structs. ``PHAB_ID=D134470``

18.2.0
-------

- scrooge-generator: Add `asClosable` method to `ServicePerEndpoint` and
  `ReqRepServicePerEndpoint` interfaces as well. ``PHAB_ID=D134171``

- scrooge-generator: Remove unused `functionToService` and `serviceToFunction` 
  methods along with `ServiceType` and `ReqRepServiceType` type aliases in 
  order to simplify code generation. 

  NOTE: This functionality can be manually replicated by users if/when needed
  to convert between a Function1 and a Finagle `Service`. ``PHAB_ID=D132171``

- scrooge-generator: Scala generated client now has a asClosable method returns c.t.u.Closable,
  client now can be closed by calling `client.asClosable.close`. Note that `asClosable` won't be
  generated if it is also defined by the user. ``PHAB_ID=D129645``

- scrooge-generator: Renamed subclasses of `com.twitter.scrooge.RichResponse`:
  `ProtocolExceptionResponse`, `SuccessfulResponse`, and `ThriftExceptionResponse`.
  These case classes are for representing different response types and should be only
  used by the generated code. ``PHAB_ID=D132202``

18.1.0
-------

- scrooge-generator: Update `c.t.fingale.thrit.service.MethodPerEndpointBuilder`
  to build `MethodPerEndpoint` types. Add new `ThriftServiceBuilder` for
  building the higher-kinded form from a `ServicePerEndpoint`. Users should
  prefer using the `MethodPerEndpointBuilder`. ``PHAB_ID=D127538``

- scrooge-generator: Add more metadata to generated java objects ``PHAB_ID=D122997``
  Includes:
    * struct and field annotations from the idl files
    * which fields have default values