@@ -5,6 +5,8 @@
 Unreleased
 ----------
 
+- scrooge-core: Check for corruption in size meta field of container and throw
+  an exception if size is found corrupted. ``PHAB_ID=D150057``
 - scrooge: Upgrade libthrift to 0.10.0. ``PHAB_ID=D124620``
 
 
